Fix vertical align

--- a/packages/@coorpacademy-components/src/molecule/video-player/style.css
+++ b/packages/@coorpacademy-components/src/molecule/video-player/style.css
@@ -2,4 +2,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  display: flex; 
+  align-items: center;
+  justify-content: center;
 }
